# hypersign-kyc-contracts

./: Cargo.toml  README.md  dry-run-testnet-osmosis.md  dry-run-testnet.md  dry-run.md  urdna2015.txt  wasm-optimiser.sh
blockchains/nibid/: Readme.md
blockchains/nibid/config/: addrbook.json  app.toml  client.toml  config.toml  genesis.json  node_key.json  priv_validator_key.json
blockchains/nibid/config/gentx/: gentx-14a1360aa8c0640590fc8ca03cde520db6b50223.json
contracts/hypersign-factory/: Cargo.toml  build-sc-check.sh  wasm.md
contracts/hypersign-factory/.cargo/: config
contracts/hypersign-factory/src/: contract.rs  entry.rs  error.rs  helper.rs  lib.rs  msg.rs  state.rs  test.rs
contracts/hypersign-kyc-token/: Cargo.toml  build-sc-check.sh  build-test.sh
contracts/hypersign-kyc-token/src/: lib.rs
contracts/issuer-kyc/: Cargo.toml  build-sc-check.sh  wasm.md
contracts/issuer-kyc/src/: contract.rs  entry.rs  error.rs  lib.rs  msg.rs  state.rs  test.rs  zkpverify.rs
contracts/issuer-kyc/src/zkpverify/hypersign-circuits/zkProofOfAge/: ver_key.json
contracts/issuer-kyc/src/zkpverify/parser/: parser_bn.rs
contracts/ssi-manager/: Cargo.toml  build-sc-check.sh  context.json  readme.md
contracts/ssi-manager/src/: bkp.rs  bkp.rs.rs  bkp2.rs  bkp3.rs  contract.rs  ed25519.rs.txt  ed25519_signature_2020.rs  entry.rs  error.rs  lib.rs  lib_json_ld.rs  main.rs  msg.rs  state.rs  test.rs  urdna.rs  urdna2015.rs
contracts/ssi-manager/test/: bkp.json  canon_didproof.txt  canon_vc.txt  expanded.ttl  expanded_test__vc.nq  expanded_test_basic.json  expanded_test_service.json  expanded_test_vc.json  test_basic.json  test_didproof.json  test_service.json  test_vc.json
contracts/ssi-manager/test/mock/: expanded_did_doc.json  expanded_did_proof.json  issuer_did.json
contracts/ssi-manager/test/samples/: expanded_test_multiple_verm.json  test_bkp.rs  test_multiple_verm.json  test_vc.json  test_vc_proof.json
cosmwasm/: README.md
demo-authorization/: README.md  package-lock.json  package.json  tsconfig.json  urdna2015.md
demo-authorization/src/: contexts.json  did.ts  expanded.ts  index.ts  wallet.ts
docs/: process-flow.md  resources.md  test.sh  todo.md  wasm copy.md  wasm-testnet.md  wasm.md
docs/blockchains/: Readme.md
docs/blockchains/nibid/: dry-run-mainnet-nibiru.md  dry-run-testnet-nibiru.md
docs/blockchains/osmosis/: dry-run-testnet-osmosis.md
docs/scripts/: createAccounts.sh
