[workspace.package]
version       = "0.1.0"
edition       = "2021"
license       = "Apache-2.0"
repository    = "https://github.com/hypersign-protocol/hypersign-kyc-contracts"
homepage      = "https://github.com/hypersign-protocol/hypersign-kyc-contracts"
documentation = "https://github.com/hypersign-protocol/hypersign-kyc-contracts"
rust-version  = "1.65"


[workspace]
members = ["contracts/*"]

[workspace.dependencies]
cosmwasm-schema = "2.0.1"
cosmwasm-std    = "^1.2"
cw-storage-plus = "^1.1"
schemars        = "0.8.16"
serde           = "1.0.198"
thiserror       = "1.0.58"
cw-multi-test   = "0.13.4"
cw-utils        = "1.0.3"
cw721-base      = "0.18.0"
issuer-kyc      = { version = "*", path = "./contracts/issuer-kyc"} 
# cw721-base      = { version = "*", path = "./contracts/cw721-base" }

