[workspace.package]
version       = "0.1.0"
edition       = "2021"
license       = "Apache-2.0"
repository    = "https://github.com/hypersign-protocol/hypersign-kyc-contracts"
homepage      = "https://github.com/hypersign-protocol/hypersign-kyc-contracts"
documentation = "https://github.com/hypersign-protocol/hypersign-kyc-contracts"
rust-version  = "1.65"


[workspace]
members = ["contracts/*"]

[workspace.dependencies]
cosmwasm-schema = "2.0.1"
cosmwasm-std    = "^1.2"
cw-storage-plus = "^1.1"
schemars        = "0.8.16"
serde           = "1.0.198"
thiserror       = "1.0.58"
cw-multi-test   = "0.13.4"
cw-utils        = "1.0.3"
cw721-base      = "0.18.0"
cw721-metadata-onchain = "0.15.0"
serde_json      = "1.0.117"
hex             = "0.4"
multibase       = "0.8"
cw721           = { version = "*", path = "./contracts/cw721" }
issuer-kyc      = { version = "*", path = "./contracts/issuer-kyc"} 
ssi-manager     = { version = "*", path = "./contracts/ssi-manager"}
hypersign-kyc-token = {version = "*", path = "./contracts/hypersign-kyc-token"}
# zk-verifier     = { version = "*", path = "./contracts/zk-verifier"} 
# cw721-base      = { version = "*", path = "./contracts/cw721-base" }

