[package]
name = "hypersign-factory"
version       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []
tests = ["library", "cw-multi-test"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw-storage-plus = { workspace = true }
cw721-base      = { workspace = true, features = ["library"] }
schemars        = { workspace = true }
serde           = { workspace = true }
thiserror       = { workspace = true }
cw-multi-test   = { workspace = true, optional = true  }
cw-utils        = { workspace = true }
issuer-kyc      = { workspace = true, features = ["library"] }
ssi-manager     = { workspace = true, features = ["library"] }

[dev-dependencies]
cw-multi-test = { workspace = true }
