[package]
name = "hypersign-kyc-token"
version       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []
tests = ["library", "cw-multi-test"]

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw-storage-plus = { workspace = true }
cw721-metadata-onchain = { workspace = true, features = ["library"] }
schemars        = { workspace = true }
serde           = { workspace = true }
cw-multi-test   = { workspace = true, optional = true  }
cw-utils        = { workspace = true }
cw2             = { workspace = true }
cw721           = { workspace = true}

[dev-dependencies]
cw-multi-test = { workspace = true }
