[package]
name = "issuer-kyc"
version       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []
tests = ["library", "cw-multi-test"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw-storage-plus = { workspace = true }
cw721-metadata-onchain = { workspace = true, features = ["library"] }
hypersign-kyc-token = { workspace = true, features = ["library"] }
schemars        = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
thiserror       = { workspace = true }
cw-multi-test   = { workspace = true, optional = true  }
cw-utils        = { workspace = true }
hex             = { workspace = true }
multibase       = { workspace = true }
ssi-manager     = { workspace = true, features = ["library"] }
strum_macros = "0.26"
bellman_ce = { git = "https://github.com/DoraFactory/bellman.git" }
pairing_ce = { git = "https://github.com/matter-labs/pairing.git" }
cw721           = { workspace = true}
ff_ce = "0.14.3"

[dev-dependencies]
cw-multi-test = { workspace = true }
