[package]
name = "issuer-kyc"
version       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []
tests = ["library", "cw-multi-test"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw-storage-plus = { workspace = true }
hypersign-kyc-token = { workspace = true, features = ["library"] }
hypersign-zk-verifier = {workspace = true, features = ["library"] }
schemars        = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
thiserror       = { workspace = true }
cw-multi-test   = { workspace = true, optional = true  }
cw-utils        = { workspace = true }
hex             = { workspace = true }
multibase       = { workspace = true }
ssi-manager     = { workspace = true, features = ["library"] }
strum_macros = "0.26"
cw2             = {workspace = true}
semver          = {workspace = true}
cw721           = { workspace = true}

[dev-dependencies]
cw-multi-test = { workspace = true }
