[package]
name = "ssi-manager"
version       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []
tests = ["library", "cw-multi-test"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw-storage-plus = { workspace = true }
cw721-base      = { workspace = true, features = ["library"] }
schemars        = { workspace = true }
serde           = { workspace = true }
thiserror       = { workspace = true }
cw-multi-test   = { workspace = true, optional = true  }
cw-utils        = { workspace = true }
didkit          = { version = "0.6",  features = ["http-did"] }
json-ld         = "0.12.1"
sha256          = "1.5.0"
rdf-types       = "0.12.17"
ed25519-dalek   = { version= "2.1.1", features= ["serde", "digest"]}
serde_json      = "1.0.117"
hex             = "0.4"
multibase       = "0.8"
tokio           = { version = "1", features = ["full"] }
sophia = "0.8.0"


[dev-dependencies]
cw-multi-test = { workspace = true }
