[package]
name = "ssi-manager"
version       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []
tests = ["library", "cw-multi-test"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw-storage-plus = { workspace = true }
cw721-base      = { workspace = true, features = ["library"] }
schemars        = { workspace = true }
serde           = { workspace = true }
thiserror       = { workspace = true }
cw-multi-test   = { workspace = true, optional = true  }
cw-utils        = { workspace = true }
serde_json      = { workspace = true }
hex             = { workspace = true }
multibase       = { workspace = true }
getrandom = { version = "0.2", features = ["js"] }
sha2 = "0.10"
rdf-types = "0.22.4"
ssi-rdf = "0.1.0" 
nquads-syntax = "0.19"
locspan = "0.8"
oxrdf =  { version = "0.2.0-rc.1" }
oxigraph = { version = "0.4.0-rc.1", default-features = false, features = [] }

[dev-dependencies]
cw-multi-test = { workspace = true }
